ボタンのLabelをクリック→タップに変更

--- a/TimeDifference/Base.lproj/Main.storyboard
+++ b/TimeDifference/Base.lproj/Main.storyboard
@@ -112,7 +112,7 @@
                                                 </constraints>
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="クリック">
+                                                <buttonConfiguration key="configuration" style="plain" title="タップ">
                                                     <fontDescription key="titleFontDescription" type="system" pointSize="24"/>
                                                 </buttonConfiguration>
                                                 <connections>
